--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.35.5",
+    "@neondatabase/serverless": "^0.10.0",
+    "@prisma/adapter-neon": "^7.0.1",
+    "@prisma/client": "^7.0.1",
     "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
+    "inngest": "^3.19.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
-    "recharts": "^3.1.2"
+    "recharts": "^3.1.2",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "prisma": "^7.0.1",
     "tailwindcss": "^4"
   }
 }
