--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "date-fns": "^4.1.0",
     "inngest": "^3.19.0",
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
+   "next": "^15.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/ws": "^8.18.1",
     "prisma": "^7.0.1",
     "tailwindcss": "^4"
   }
