--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@prisma/adapter-neon": "^7.0.1",
     "@prisma/client": "^7.0.1",
     "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.13.2",
     "date-fns": "^4.1.0",
+    "imagekit": "^6.0.0",
     "inngest": "^3.19.0",
     "lucide-react": "^0.525.0",
-   "next": "^15.5.6",
+    "next": "^15.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
